--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-npm i @chakra-ui/react @emotion/react @emotion/styled framer-motion
+npm install @chakra-ui/react @emotion/react @emotion/styled framer-motion
 {
   "name": "three",
   "version": "0.1.0",
